# kung-fu-chess

./: .gitignore  CMakeLists.txt  CTD.slnx  test_gameover_board.txt
CTD/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  BoardParser.cpp  BoardParser.h  CTD.cpp  CTD.vcxproj  CTD.vcxproj.filters  CommandParser.cpp  CommandParser.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  StringUtils.h  Types.h
CTD/io/: BoardParser.cpp  BoardParser.h  BoardPrinter.h
CTD/model/: Board.cpp  Board.h  GameState.cpp  GameState.h  Piece.cpp  Piece.h  Position.h
CTD/realtime/: RealTimeArbiter.cpp  RealTimeArbiter.h
CTD/rules/: BishopRule.cpp  KingRule.cpp  KingRule.h  KnightRule.cpp  KnightRule.h  PawnRule.cpp  PawnRule.h  QueenRule.cpp  QueenRule.h  RookRule.cpp  RuleEngine.h
demo/: animation_state_demo.cpp  inspect_board_demo.cpp  live_game_demo.cpp  load_pieces_demo.cpp  render_demo.cpp  show_board_demo.cpp
server/: GameServer.cpp  GameServer.h  main.cpp
src/: CTD.cpp  Constants.h  Game.cpp  Game.h  Types.h
src/client/: NetworkClient.cpp  NetworkClient.h
src/engine/: GameEngine.cpp  GameEngine.h  GameSnapshot.h
src/input/: BoardMapper.cpp  BoardMapper.h  Controller.cpp  Controller.h  GameWindow.cpp  GameWindow.h
src/io/: BoardParser.cpp  BoardParser.h  BoardPrinter.cpp  PieceNotation.cpp  PieceNotation.h
src/model/: Board.h  Color.h  GameState.cpp  GameState.h  MoveLogEntry.h  Piece.cpp  Piece.h  PieceType.h
src/notation/: MoveNotation.cpp  MoveNotation.h  PieceNotation.cpp  PieceNotation.h
src/protocol/: Protocol.cpp  Protocol.h
src/realtime/: RealTimeArbiter.cpp  RealTimeArbiter.h  motion.h
src/rules/: BishopRule.h  MoveGeometry.cpp  MoveGeometry.h  MoveValidator.cpp  MoveValidator.h  PawnRule.cpp  PieceRule.h  PieceRules.cpp  PieceRules.h  QueenRule.cpp  RookRule.cpp  RookRule.h  RuleEngine.cpp  RuleEngine.h
src/texttests/: ScriptCommand.h  ScriptParser.cpp  ScriptParser.h  TextTestRunner.cpp  TextTestRunner.h
src/utils/: EnumLookup.h  StringUtils.h
src/view/: AnimationConfig.cpp  AnimationConfig.h  AnimationDirector.cpp  AnimationDirector.h  AnimationState.cpp  AnimationState.h  BoardLayout.cpp  BoardLayout.h  CoordinateLabels.cpp  CoordinateLabels.h  Img.cpp  Img.h  PieceAnimationState.cpp  PieceAnimationState.h  PieceGraphicsLibrary.cpp  PieceGraphicsLibrary.h  PieceSprite.h  RenderConstants.h  Renderer.cpp  Renderer.h  SidePanel.cpp  SidePanel.h
src/view/animation/: AnimationDirector.cpp  AnimationDirector.h  AnimationState.h  PieceAnimationState.cpp  PieceAnimationState.h  PieceGraphicsLibrary.cpp  PieceGraphicsLibrary.h  PieceSprite.h
